fix(styling): Increase terminal padding for webkit scrollbars

--- a/frontend/src/assets/xterm.css
+++ b/frontend/src/assets/xterm.css
@@ -40,7 +40,7 @@
     user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
-    padding: 10px;
+    padding: 15px;
 }
 
 .xterm.focus,
